added channel name

--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     },
     "require": {
         "php": "^8.1",
+        "4spacesdk/ci4authextension": "^1.0",
         "codeigniter4/framework": "^4.0"
     },
     "require-dev": {
