--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
     "require": {
         "php": "^8.1",
         "4spacesdk/ci4authextension": "^1.0",
-        "codeigniter4/framework": "^4.0"
+        "codeigniter4/framework": "^4.0",
+        "nesbot/carbon": "^3.5",
+        "phpmailer/phpmailer": "^6.9"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9",
